@@ -29,6 +29,7 @@
 			<Styles>
 				<Style>
 					<ShowLabels>true</ShowLabels>
+					<LabelMaxScale>.004</LabelMaxScale>
 					<LineWidth>1</LineWidth>
 					<LineColor>255,145,145,145</LineColor>					
 					<LineStyle>Solid</LineStyle>
@@ -47,6 +48,7 @@
 			</Data>
 		</Layer>	
 		<Layer>
+			<MaxScale>.008</MaxScale>
 			<LabelField>name</LabelField>
 			<Theme>Unique</Theme>
 			<ThemeField>magnitude</ThemeField>					
